--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,11 @@ dependencies = [
     "fastapi>=0.115.5",
     "jinja2>=3.1.4",
     "litellm>=1.52.14",
+    "boto3>=1.35.68",
+    "ipykernel>=6.29.5",
+    "joblib>=1.4.2",
+    "tqdm>=4.67.0",
+    "scikit-learn>=1.5.2",
 ]
 
 [build-system]
