--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "fastapi>=0.115.5",
+    "fastapi[standard]>=0.115.5",
     "jinja2>=3.1.4",
     "litellm>=1.52.14",
     "boto3>=1.35.68",
@@ -13,6 +13,7 @@ dependencies = [
     "joblib>=1.4.2",
     "tqdm>=4.67.0",
     "scikit-learn>=1.5.2",
+    "fasthx>=2.0.2",
 ]
 
 [build-system]
