--- a/configs/historic_data.yaml
+++ b/configs/historic_data.yaml
@@ -1,6 +1,6 @@
 prompt_name: historic_budgets.j2
 ndatapoints: 500
-output_file: data/historic_data.json
+output_file: historic_data.json
 required_fields: 
   - email_subject
   - email_body
