--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,18 @@
-version: '3.8'
 services:
   budger-app:
-    container_name: budger
+    container_name: budger_app
+    build: .
     restart: always
     env_file: .env
-    build: .
     networks:
-      - db_network
       - web_network
+
   nginx:
     container_name: nginx
     restart: always
     image: "nginx:latest"
     ports:
-      - "85:85"
+      - "80:80"
     volumes:
       - ./nginx:/etc/nginx/conf.d
     networks:
@@ -21,8 +20,6 @@ services:
     depends_on: 
       - budger-app
 networks:
-  db_network:
-    driver: bridge
   web_network:
     driver: bridge
  
